Search history Bold
Former-commit-id: 3dfb3fd39ccfdd1969c2dc57501e9dfba22c92a3 [formerly 2f12256dca6bf4be34f259cec628bccca1bb5882]
Former-commit-id: 9c7e60a657795299c37def46844de1bd70a5e85a

--- a/ExViewer/Themes/Generic.xaml
+++ b/ExViewer/Themes/Generic.xaml
@@ -353,7 +353,19 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="controls:HtmlTextBlock">
-                    <RichTextBlock x:Name="Presenter"/>
+                    <RichTextBlock x:Name="Presenter" />
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="IsTabStop"
+                Value="False" />
+    </Style>
+
+    <Style TargetType="controls:HighlightTextBlock">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="controls:HighlightTextBlock">
+                    <TextBlock x:Name="Presenter" />
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
