--- a/ExViewer/Views/SearchPage.xaml
+++ b/ExViewer/Views/SearchPage.xaml
@@ -7,7 +7,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:pr="using:PullToRefresh.UWP"
       xmlns:vm="using:ExViewer.ViewModels"
-      xmlns:db="using:ExViewer.DataBase"
+      xmlns:db="using:ExViewer.Database"
       mc:Ignorable="d"
       xmlns:controls="using:ExViewer.Controls"
       xmlns:client="using:ExClient"
