--- a/ExViewer/Themes/GenericOverride.xaml
+++ b/ExViewer/Themes/GenericOverride.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:ptr="using:PullToRefresh.UWP">
     <Style TargetType="ScrollBar">
         <Setter Property="MinWidth"
                 Value="12" />
@@ -93,7 +94,7 @@
                                 <Setter Property="Width"
                                         Value="{StaticResource ScrollBarWidth}" />
                                 <Setter Property="MinHeight"
-                                        Value="{StaticResource ScrollBarMinLength}"/>
+                                        Value="{StaticResource ScrollBarMinLength}" />
                             </Style>
                             <Style x:Key="HorizontalThumbStyle"
                                    TargetType="Thumb"
@@ -288,4 +289,94 @@
         </Setter>
     </Style>
 
+    <Style TargetType="ptr:PullRefreshProgressControl">
+        <Setter Property="Height"
+                Value="80" />
+        <Setter Property="Width"
+                Value="200" />
+        <Setter Property="IsTabStop"
+                Value="False" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ptr:PullRefreshProgressControl">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="VisualStateGroup">
+                                <VisualState x:Name="Normal" />
+                                <VisualState x:Name="ReleaseToRefresh">
+                                    <Storyboard>
+                                        <DoubleAnimation Storyboard.TargetName="txt"
+                                                         Storyboard.TargetProperty="Opacity"
+                                                         To="0"
+                                                         Duration="0"
+                                                         BeginTime="0:0:0.05">
+                                        </DoubleAnimation>
+                                        <DoubleAnimation Storyboard.TargetName="txt2"
+                                                         Storyboard.TargetProperty="Opacity"
+                                                         To="1"
+                                                         Duration="0"
+                                                         BeginTime="0:0:0.05">
+                                        </DoubleAnimation>
+                                        <DoubleAnimation Storyboard.TargetName="rect"
+                                                         Storyboard.TargetProperty="Opacity"
+                                                         To="1"
+                                                         Duration="0:0:0.1">
+                                            <DoubleAnimation.EasingFunction>
+                                                <QuadraticEase EasingMode="EaseIn" />
+                                            </DoubleAnimation.EasingFunction>
+                                        </DoubleAnimation>
+                                    </Storyboard>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                        <TextBlock x:Name="txt"
+                                   Text="{TemplateBinding PullToRefreshText}"
+                                   HorizontalAlignment="Center"
+                                   VerticalAlignment="Bottom" />
+                        <TextBlock x:Name="txt2"
+                                   Text="{TemplateBinding ReleaseToRefreshText}"
+                                   HorizontalAlignment="Center"
+                                   VerticalAlignment="Bottom"
+                                   Opacity="0" />
+                        <Rectangle x:Name="rect"
+                                   StrokeThickness="0"
+                                   Width="200"
+                                   Height="4"
+                                   Fill="{StaticResource SystemControlForegroundAccentBrush}"
+                                   Margin="4"
+                                   Opacity="0.5"
+                                   VerticalAlignment="Bottom"
+                                   RenderTransformOrigin="0.5,0.5"
+                                   Grid.Row="1">
+                            <Rectangle.RenderTransform>
+                                <TransformGroup>
+                                    <ScaleTransform ScaleX="{Binding}" />
+                                </TransformGroup>
+                            </Rectangle.RenderTransform>
+                        </Rectangle>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="ptr:PullToRefreshBox">
+        <Setter Property="RefreshThreshold"
+                Value="79" />
+        <Setter Property="IsTabStop"
+                Value="False" />
+        <Setter Property="TopIndicatorTemplate">
+            <Setter.Value>
+                <DataTemplate>
+                    <ptr:PullRefreshProgressControl Progress="{Binding}"
+                                                    PullToRefreshText="Pull to refresh"
+                                                    ReleaseToRefreshText="Release to refresh" />
+                </DataTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
