--- a/ExViewer/Themes/NamedStyles.xaml
+++ b/ExViewer/Themes/NamedStyles.xaml
@@ -59,6 +59,12 @@
 
     <Style x:Key="GalleryListViewStyle"
            TargetType="ListView">
+        <Setter Property="ScrollViewer.VerticalScrollMode"
+                Value="Auto" />
+        <Setter Property="ScrollViewer.IsVerticalScrollChainingEnabled"
+                Value="True" />
+        <Setter Property="ScrollViewer.HorizontalScrollMode"
+                Value="Disabled" />
         <Setter Property="IsItemClickEnabled"
                 Value="True" />
         <Setter Property="SelectionMode"
@@ -69,102 +75,6 @@
                 Value="{StaticResource GalleryListViewItemStyle}" />
         <Setter Property="ContinuumNavigationTransitionInfo.IsExitElement"
                 Value="True" />
-        <Setter Property="ScrollViewer.IsVerticalScrollChainingEnabled"
-                Value="True" />
-    </Style>
-
-    <Style x:Key="PullRefreshProgressControlStyle"
-           TargetType="pr:PullRefreshProgressControl">
-        <Setter Property="Height"
-                Value="80" />
-        <Setter Property="Width"
-                Value="200" />
-        <Setter Property="IsTabStop"
-                Value="False" />
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="pr:PullRefreshProgressControl">
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-                        <VisualStateManager.VisualStateGroups>
-                            <VisualStateGroup x:Name="VisualStateGroup">
-                                <VisualState x:Name="Normal" />
-                                <VisualState x:Name="ReleaseToRefresh">
-                                    <Storyboard>
-                                        <DoubleAnimation Storyboard.TargetName="txt"
-                                                         Storyboard.TargetProperty="Opacity"
-                                                         To="0"
-                                                         Duration="0"
-                                                         BeginTime="0:0:0.05">
-                                        </DoubleAnimation>
-                                        <DoubleAnimation Storyboard.TargetName="txt2"
-                                                         Storyboard.TargetProperty="Opacity"
-                                                         To="1"
-                                                         Duration="0"
-                                                         BeginTime="0:0:0.05">
-                                        </DoubleAnimation>
-                                        <DoubleAnimation Storyboard.TargetName="rect"
-                                                         Storyboard.TargetProperty="Opacity"
-                                                         To="1"
-                                                         Duration="0:0:0.1">
-                                            <DoubleAnimation.EasingFunction>
-                                                <QuadraticEase EasingMode="EaseIn" />
-                                            </DoubleAnimation.EasingFunction>
-                                        </DoubleAnimation>
-                                    </Storyboard>
-                                </VisualState>
-                            </VisualStateGroup>
-                        </VisualStateManager.VisualStateGroups>
-                        <TextBlock x:Name="txt"
-                                   Text="{TemplateBinding PullToRefreshText}"
-                                   HorizontalAlignment="Center"
-                                   VerticalAlignment="Bottom" />
-                        <TextBlock x:Name="txt2"
-                                   Text="{TemplateBinding ReleaseToRefreshText}"
-                                   HorizontalAlignment="Center"
-                                   VerticalAlignment="Bottom"
-                                   Opacity="0" />
-                        <Rectangle x:Name="rect"
-                                   StrokeThickness="0"
-                                   Width="200"
-                                   Height="4"
-                                   Fill="{StaticResource SystemControlForegroundAccentBrush}"
-                                   Margin="4"
-                                   Opacity="0.5"
-                                   VerticalAlignment="Bottom"
-                                   RenderTransformOrigin="0.5,0.5"
-                                   Grid.Row="1">
-                            <Rectangle.RenderTransform>
-                                <TransformGroup>
-                                    <ScaleTransform ScaleX="{Binding}" />
-                                </TransformGroup>
-                            </Rectangle.RenderTransform>
-                        </Rectangle>
-                    </Grid>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
-    <Style x:Key="PullToRefreshBoxStyle"
-           TargetType="pr:PullToRefreshBox">
-        <Setter Property="RefreshThreshold"
-                Value="79" />
-        <Setter Property="IsTabStop"
-                Value="False" />
-        <Setter Property="TopIndicatorTemplate">
-            <Setter.Value>
-                <DataTemplate>
-                    <pr:PullRefreshProgressControl Progress="{Binding}"
-                                                   PullToRefreshText="Pull to refresh"
-                                                   ReleaseToRefreshText="Release to refresh"
-                                                   Style="{StaticResource PullRefreshProgressControlStyle}" />
-                </DataTemplate>
-            </Setter.Value>
-        </Setter>
     </Style>
 
     <Style x:Key="SplitButtonStyle"
