GalleryView scroll, Converters
Former-commit-id: a8dc32a0c6eef4abe3a66962bdd02d402f7df500 [formerly f15559496100077d1071e9f524dc4a970695bb92]
Former-commit-id: 8c169132d204da9d35cd9466e937b84d167e296b

--- a/ExViewer/Controls/GalleryViewer.xaml
+++ b/ExViewer/Controls/GalleryViewer.xaml
@@ -56,7 +56,7 @@
             <local:CategoryTag Category="{x:Bind Gallery.Category, Mode=OneWay}"
                                Grid.Row="2"
                                HorizontalAlignment="Left" />
-            <TextBlock Text="{x:Bind Gallery.RecordCount, Mode=OneWay, ConverterParameter=\{0\} Pages, Converter={StaticResource StringConverter}}"
+            <TextBlock Text="{x:Bind Gallery.RecordCount, Mode=OneWay, Converter={StaticResource StringConverter}, ConverterParameter='{}{0} Pages'}"
                        Grid.Row="4" />
             <TextBlock Text="{x:Bind Gallery.Rating, Mode=OneWay, Converter={StaticResource RateStringConverter}}"
                        FontFamily="Segoe MDL2 Assets"
