--- a/ExViewer/Views/SettingsPage.xaml
+++ b/ExViewer/Views/SettingsPage.xaml
@@ -65,57 +65,52 @@
             </NavigationThemeTransition>
         </TransitionCollection>
     </Page.Transitions>
-    <Grid Background="{StaticResource ApplicationPageBackgroundThemeBrush}">
-        <Rectangle Height="48"
-                   Fill="{ThemeResource SystemControlBackgroundChromeMediumBrush}"
-                   VerticalAlignment="Top"
-                   StrokeThickness="0" />
-        <Pivot x:Name="pv_root"
-               IsTabStop="False">
-            <Pivot.LeftHeader>
-                <Button Style="{StaticResource SplitButtonStyle}"
-                        Click="btn_Click" />
-            </Pivot.LeftHeader>
-            <Pivot.HeaderTemplate>
-                <DataTemplate x:DataType="settings:GroupedSettings">
-                    <TextBlock Text="{x:Bind GroupName}" />
-                </DataTemplate>
-            </Pivot.HeaderTemplate>
-            <Pivot.ItemTemplate>
-                <DataTemplate x:DataType="settings:GroupedSettings">
-                    <ListView ItemTemplateSelector="{StaticResource SettingTemplateSelector}"
-                              ItemsSource="{x:Bind}"
-                              Margin="-12,0">
-                        <ListView.ItemContainerStyle>
-                            <Style TargetType="ListViewItem">
-                                <Setter Property="Template">
-                                    <Setter.Value>
-                                        <ControlTemplate TargetType="ListViewItem">
-                                            <ContentPresenter HorizontalAlignment="Stretch"
-                                                              Padding="{TemplateBinding Padding}"
-                                                              Foreground="{TemplateBinding Foreground}"
-                                                              Background="{TemplateBinding Background}"
-                                                              BorderBrush="{TemplateBinding BorderBrush}"
-                                                              Control.IsTemplateFocusTarget="True" />
-                                        </ControlTemplate>
-                                    </Setter.Value>
-                                </Setter>
-                                <Setter Property="MinHeight"
-                                        Value="0" />
-                                <Setter Property="Margin"
-                                        Value="4" />
-                                <Setter Property="Padding"
-                                        Value="8" />
-                                <Setter Property="UseSystemFocusVisuals"
-                                        Value="True" />
-                            </Style>
-                        </ListView.ItemContainerStyle>
-                        <ListView.ItemContainerTransitions>
-                            <TransitionCollection />
-                        </ListView.ItemContainerTransitions>
-                    </ListView>
-                </DataTemplate>
-            </Pivot.ItemTemplate>
-        </Pivot>
-    </Grid>
+    <Pivot x:Name="pv_root"
+           Background="{StaticResource ApplicationPageBackgroundThemeBrush}"
+           BorderBrush="{ThemeResource SystemControlBackgroundChromeMediumBrush}">
+        <Pivot.LeftHeader>
+            <Button Style="{StaticResource SplitButtonStyle}"
+                    Click="btn_Click" />
+        </Pivot.LeftHeader>
+        <Pivot.HeaderTemplate>
+            <DataTemplate x:DataType="settings:GroupedSettings">
+                <TextBlock Text="{x:Bind GroupName}" />
+            </DataTemplate>
+        </Pivot.HeaderTemplate>
+        <Pivot.ItemTemplate>
+            <DataTemplate x:DataType="settings:GroupedSettings">
+                <ListView ItemTemplateSelector="{StaticResource SettingTemplateSelector}"
+                          ItemsSource="{x:Bind}"
+                          Margin="-12,0">
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="ListViewItem">
+                                        <ContentPresenter HorizontalAlignment="Stretch"
+                                                          Padding="{TemplateBinding Padding}"
+                                                          Foreground="{TemplateBinding Foreground}"
+                                                          Background="{TemplateBinding Background}"
+                                                          BorderBrush="{TemplateBinding BorderBrush}"
+                                                          Control.IsTemplateFocusTarget="True" />
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                            <Setter Property="MinHeight"
+                                    Value="0" />
+                            <Setter Property="Margin"
+                                    Value="4" />
+                            <Setter Property="Padding"
+                                    Value="8" />
+                            <Setter Property="UseSystemFocusVisuals"
+                                    Value="True" />
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                    <ListView.ItemContainerTransitions>
+                        <TransitionCollection />
+                    </ListView.ItemContainerTransitions>
+                </ListView>
+            </DataTemplate>
+        </Pivot.ItemTemplate>
+    </Pivot>
 </Page>
