--- a/ExViewer/Views/RootControl.xaml
+++ b/ExViewer/Views/RootControl.xaml
@@ -63,7 +63,7 @@
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
+                            <RowDefinition />
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition />
@@ -108,8 +108,8 @@
                                 ToolTipService.ToolTip="Change user"
                                 Style="{StaticResource NavigationBackButtonSmallStyle}" />
                         <ListView x:Name="lv_Pane"
-                                  Grid.Row="999"
-                                  Grid.ColumnSpan="999"
+                                  Grid.Row="3"
+                                  Grid.ColumnSpan="4"
                                   Style="{StaticResource StackPanelListViewStyle}">
                             <ListView.Transitions>
                                 <TransitionCollection />
@@ -138,6 +138,16 @@
                                               FontSize="16" />
                                 </controls:SplitViewTab.Icon>
                             </controls:SplitViewTab>
+                            <ListView.Footer>
+                                <controls:SplitViewTab x:Name="svt_About"
+                                                       Content="About"
+                                                       Click="svt_Click">
+                                    <controls:SplitViewTab.Icon>
+                                        <FontIcon Glyph="&#xE946;"
+                                                  FontSize="16" />
+                                    </controls:SplitViewTab.Icon>
+                                </controls:SplitViewTab>
+                            </ListView.Footer>
                         </ListView>
                     </Grid>
                 </ScrollViewer>
